# aula09_bootcamp

./: etl.py  exemplo_00.py  exemplo_01.py  exemplo_time_decorator.py  logging_exemplo_erros.py  pipeline.py  pyproject.toml  time_decorator.py  utils_log.py
