[tool.poetry]
name = "aula09-bootcamp"
version = "0.1.0"
description = ""
authors = ["Marcelo Shibuya <marcelo.hshibuya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pandera = "^0.20.3"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
